@@ -52,6 +52,9 @@ class IFramePage
   in_iframe(:index => 0) do |frame|
     text_field(:text_field_1_index, :name => 'senderElement', :frame => frame)
   end
+  in_iframe(:class => 'iframe', :name => 'frame2') do |frame|
+    text_field(:text_field_2_multiple_identifiers, :name => 'recieverElement', :frame => frame)
+  end
 end
 
 Given(/^I am on the frame elements page$/) do
@@ -60,11 +63,11 @@ Given(/^I am on the frame elements page$/) do
 end
 
 When(/^I type "(.*?)" into the text field for frame 2 using "(.*?)"$/) do |text, arg_type|
-  @page.send "text_field_2_#{arg_type}=".to_sym, text
+  @page.send "text_field_2_#{arg_type.gsub(' ','_')}=".to_sym, text
 end
 
 Then(/^I should verify "(.*?)" is in the text field for frame 2 using "(.*?)"$/) do |text, arg_type|
-  result = @page.send "text_field_2_#{arg_type}".to_sym
+  result = @page.send "text_field_2_#{arg_type.gsub(' ','_')}".to_sym
   expect(result).to eql text
 end
 
